kubernetes/main/apps/arc-systems/controller/app/networkpolicy.yaml
---
# Controller and listeners call only Kubernetes and the GitHub runner service.
# There is no ingress listener for jobs; GitHub connections are outbound.
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: arc-systems
  namespace: arc-systems
spec:
  endpointSelector: {}
  ingress:
    - {}
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: ANY
          rules:
            dns: &githubDomains
              - matchName: github.com
              - matchName: api.github.com
              - matchPattern: "*.actions.githubusercontent.com"
              - matchPattern: "*.*.actions.githubusercontent.com"
              - matchPattern: "*.githubusercontent.com"
    - toEntities: [kube-apiserver]
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
            - port: "6443"
              protocol: TCP
    - toFQDNs: *githubDomains
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
